--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>header 1</h1>
+        <h1>house plants</h1>
+        <div id="myApp">
+            <table>
+                <thead>
+                    <div class="header-row">
+                        <th>name</th>
+                        <th>age</th>
+                        <th>care</th>
+                    </div>
+                </thead>
+                <tbody>
+                    <tr v-for="(plant, index) in plants"
+                    v-bind:class="{key: plant.age>6}">
+                        <td>{{plant.name}}</td>
+                        <td>{{plant.age}}</td>
+                        <td>{{plant.care}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="key">
+                <h2>oldest plant i own</h2>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="script.js"></script>
     </body>
 
