--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
             <div class="key">
                 <h2>oldest plant i own</h2>
             </div>
+            <div class="addAPlant">
+                <form v-on:submit.prevent="addPlant">
+                    <fieldset>
+                        <legend>Add a plant</legend>
+                        <label>Name<input v-model="nameInput" type="text"></label><br>
+                        <label>Age<input v-model="ageInput" type="text"></label><br>
+                        <label>Care<input v-model="careInput" type="text"></label><br>
+                        <label>Id<input v-model="idInput" type="text"></label><br>
+                        <button type="submit">Add plant</button>
+                    </fieldset>
+                </form>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
         <script src="script.js"></script>
