assignment code complete

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
                         <th>name</th>
                         <th>age</th>
                         <th>care</th>
-                        <th>get rid of me</th>
                     </div>
                 </thead>
                 <tbody>
-                    <tr v-for="(plant, index) in plants"
-                    v-bind:class="{key: plant.age>6}">
-                        <td>{{plant.name}}</td>
-                        <td>{{plant.age}}</td>
-                        <td>{{plant.care}}</td>
-                        <td><button type="button" v-on:click="deletePlant(plant)">delete</button></td>
-                    </tr>
+                    <tr is="plants-component"
+                    v-for="plant in plants"
+                        :class="{key: plant.age>6}"
+                        :name="plant.name"
+                        :age="plant.age"
+                        :care="plant.care"></tr>
                 </tbody>
             </table>
             <div class="key">
