photo input added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <form v-on:submit.prevent="addPlant">
                     <fieldset>
                         <legend>Add a plant</legend>
+                        <label>Pic<input type='file' v-model='picInput' /></label>
                         <label>Name<input v-model="nameInput" type="text"></label><br>
                         <label>Age<input v-model="ageInput" type="text"></label><br>
                         <label>Care<input v-model="careInput" type="text"></label><br>
